# starter-repo

./: .gitignore  InContract.json  InContract.plutus  MultiSig.plutus  cabal.project  key1.skey  key2.skey  payment.skey  plutus_repo.cabal  txbuilder.json
app/: Buildy.hs  Main.hs  Mainy.hs
app/Rmy/: LockAtSc.hs  Rdemy.hs
src/: InContract.hs  MultiSig.hs
