cabal-version:      2.4
name:               plutus-repo
version:            3.0.0.0

license: Apache-2.0

author:             Sireto
maintainer:         Sireto

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library starter-plutus
  exposed-modules:
    --InContract
    MultiSig
  hs-source-dirs: src
  build-depends:
      base  -any
    , plutus-tx
    , cardano-ledger-alonzo
    , cardano-api
    , plutus-ledger-api
    , plutus-tx-plugin
    , plutus-core
    , aeson
    , bytestring
    , serialise
    , base16-bytestring

executable SC
    main-is: Main.hs
    other-modules:
      Buildy
      Rmy.Rdemy
      Rmy.LockAtSc
    hs-source-dirs: app
    build-depends:
        base
        , text
        , kuber
        , aeson
        , cardano-api
        , containers
        , bytestring
        , base16-bytestring

        , plutus-core
        , plutus-ledger-api
        , plutus-tx
        , plutus-tx-plugin

        , starter-plutus
    default-language: Haskell2010